syntax = "proto3";

package team;

option go_package = "/;proto";

service Team {
	rpc CreateTeam(CreateTeamRequest) returns (CreateTeamResponse) {}
	rpc JoinTeam(JoinTeamRequest) returns (JoinTeamResponse) {}
	rpc LeaveTeam(LeaveTeamRequest) returns (LeaveTeamResponse) {}
	rpc ListMembers(ListMembersRequest) returns (ListMembersResponse) {}

	// Owner RPCs
	rpc UpdateTeam(UpdateTeamRequest) returns (UpdateTeamResponse) {}
	rpc DisbandTeam(DisbandTeamRequest) returns (DisbandTeamResponse) {}
	rpc ChangeLock(ChangeLockRequest) returns (ChangeLockResponse) {}
	rpc ChangeCoOwnerStatus(ChangeCoOwnerStatusRequest) returns (ChangeCoOwnerStatusResponse) {}

	// Co-owner RPCs
	rpc KickUser(KickUserRequest) returns (KickUserResponse) {}
	rpc GenerateJoinCode(GenerateJoinCodeRequest) returns (GenerateJoinCodeResponse) {}
}

message CreateTeamRequest {
	string name = 1;
}

message CreateTeamResponse {
}

message JoinTeamRequest {
	string code = 1;
}

message JoinTeamResponse {
}

message LeaveTeamRequest {
}

message LeaveTeamResponse {
}

message ListMembersRequest {
}

message ListMembersResponse {
	message Member {
		enum Class {
			k_9 = 0;
			k_10 = 1;
			k_11 = 2;
			k_12 = 3;
		}

		enum Rank {
			k_MEMBER = 0;
			k_COOWNER = 1;
			k_OWNER = 2;
		}

		string ID = 1;
		string name = 2;
		Class class = 3;
		Rank rank = 4;
	}

	repeated Member members = 1;
}

message UpdateTeamRequest {
	string name = 1;
}

message UpdateTeamResponse {
}

message DisbandTeamRequest {
}

message DisbandTeamResponse {
}

message ChangeLockRequest {
	bool should_lock = 1;
}

message ChangeLockResponse {
}

message ChangeCoOwnerStatusRequest {
	string user_id = 1;
	bool should_coowner = 2;
}

message ChangeCoOwnerStatusResponse {
}

message KickUserRequest {
	string user_id = 1;
}

message KickUserResponse {
}

message GenerateJoinCodeRequest {
}

message GenerateJoinCodeResponse {
	string new_code = 1;
}


